<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dataset"
        android:icon="@drawable/ic_dataset"
        android:title="@string/title_dataset" />

    <item
        android:id="@+id/navigation_model"
        android:icon="@drawable/ic_model"
        android:title="@string/title_model" />

    <item
        android:id="@+id/navigation_feature"
        android:icon="@drawable/ic_feature"
        android:title="@string/title_feature" />

    <item
        android:id="@+id/navigation_about_me"
        android:icon="@drawable/ic_about"
        android:title="@string/title_about" />
</menu>