<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.irgiys.diabpred1.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dataset"
        android:name="com.irgiys.diabpred1.ui.fragment.DatasetFragment"
        android:label="@string/title_model"
        tools:layout="@layout/fragment_dataset" />
    <fragment
        android:id="@+id/navigation_model"
        android:name="com.irgiys.diabpred1.ui.fragment.DatasetFragment"
        android:label="@string/title_model"
        tools:layout="@layout/fragment_model" />

    <fragment
        android:id="@+id/navigation_feature"
        android:name="com.irgiys.diabpred1.ui.fragment.ModelFragment"
        android:label="@string/title_feature"
        tools:layout="@layout/fragment_feature" />
    <fragment
        android:id="@+id/navigation_about_me"
        android:name="com.irgiys.diabpred1.ui.fragment.ModelFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about_me" />
</navigation>