<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ModelFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingHorizontal="20dp"
            android:text="@string/desc_model_1" />


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:paddingVertical="8dp"
                android:src="@drawable/modelingfix" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingHorizontal="20dp"
            android:text="@string/desc_model_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingHorizontal="20dp"
            android:text="@string/desc_model_3" />

        <androidx.cardview.widget.CardView
            android:layout_width="370dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@drawable/nn_visual" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingHorizontal="20dp"
            android:text="@string/desc_model_4" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="120dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/custom_grey"
                android:src="@drawable/classification_report" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>