<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AboutMeFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/irgiyansyah"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />


    <TextView
        android:id="@+id/tv_about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        android:paddingHorizontal="20dp"
        android:text="Saya Irgiyansyah seorang mahasiswa di STT Wastukancana dengan jurusan Teknik Informatika, saat ini saya sedang menempuh semester 6."
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_getintouch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:justificationMode="inter_word"
        android:paddingHorizontal="20dp"
        android:text="Get In Touch"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_me" />

    <!-- Define a guideline for consistent margin -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Email"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/guideline_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_getintouch" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/colon"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_link"
        app:layout_constraintTop_toBottomOf="@+id/tv_getintouch" />

    <TextView
        android:id="@+id/email_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/my_email"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/guideline_link"
        app:layout_constraintTop_toBottomOf="@+id/tv_getintouch" />

    <TextView
        android:id="@+id/github_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/github"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/guideline_label"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/colon"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_link"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <TextView
        android:id="@+id/github_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/irgiys"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/guideline_link"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <TextView
        android:id="@+id/linkedin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/linkedin"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/guideline_label"
        app:layout_constraintTop_toBottomOf="@+id/github_label" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/colon"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/guideline_link"
        app:layout_constraintTop_toBottomOf="@+id/github_label" />


    <TextView
        android:id="@+id/linkedin_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/irgiyansyah"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/guideline_link"
        app:layout_constraintTop_toBottomOf="@+id/github_label" />


</androidx.constraintlayout.widget.ConstraintLayout>